--- a/commands.tex
+++ b/commands.tex
@@ -27,11 +27,23 @@
   & Frei
 }
 
+\newcommand{\whitespace}[1]{
+  & \addtocounter{#1}{1}
+}
+
+
+\newcommand{\smartWhiteSpace}[1]{
+  % \arabic{#1}
+  \isWorkday{\arabic{#1}}{\whitespace{#1}\smartWhiteSpace{#1}}
+}
+
+
 
 \newcommand{\timeslot}[2]{
   \ifnum\arabic{#1}>0
     \emptycells{\arabic{#1}}
   \fi
+  % \smartWhiteSpace{#1}
   
   \Greencells{#2}{#2 (\isWorkday{\arabic{#1}}) (\arabic{#1})} &
   \emptycells{\numexpr\number\blockAmount-\arabic{#1} - (#2) -1\relax} 
