--- a/tex3.tex
+++ b/tex3.tex
@@ -1,6 +1,8 @@
 
 \ExplSyntaxOn
 \cs_generate_variant:Nn \tl_if_eq:nnTF { V }
+\cs_generate_variant:Nn \tl_if_eq:nnT { V }
+
 
 \cs_gset:Npn \runForDays #1#2#3
 {
@@ -33,21 +35,13 @@
 
 \NewDocumentCommand{\createIsWorkdayCommand}{mm}
 {
-    \cs_gset:Npn \isWorkday ##1##2
-      {
-        \seq_set_split:Nnn \l_workday_seq { ~ } { #2 }
-         % Compute the index: divide the first argument by \blockAmountPerIpaDay, truncate, then add 2.
-        \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1 }
-        \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \l_tmpa_int }}
-        % (\l_tmpa_tl)
-        \tl_if_eq:VnTF \l_tmpa_tl { H } { ##2 } { }
-
-      }
-
-      % \cs_gset:Npn \hasHolidayDays:nn ##1 ##2
-      % {
-      %   \seq_set_split:Nnn \g_workday_seq { ~ } { #2 }
-      %   \seq_item:Nn \g_workday_seq {\int_eval:n{\int_div_truncate:nn {##1}{16} +2}}
-      % }
+    \cs_gset:Npn \isWorkday##1##2##3##4
+    {
+      % d \addtocounter{##4}{1}
+      \seq_set_split:Nnn\l_workday_seq{~}{#2}%
+      \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1 }
+      \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \l_tmpa_int }}
+      \tl_if_eq:VnTF \l_tmpa_tl {H} {##2} {##3}
+    }
   }
 \ExplSyntaxOff
