--- a/tex3.tex
+++ b/tex3.tex
@@ -1,3 +1,6 @@
+\newcommand{\whitespace}[1]{
+  &\addtocounter{#1}{1}
+}
 
 \ExplSyntaxOn
 \cs_generate_variant:Nn \tl_if_eq:nnTF { V }
@@ -35,13 +38,12 @@
 
 \NewDocumentCommand{\createIsWorkdayCommand}{mm}
 {
-    \cs_gset:Npn \isWorkday##1##2##3##4
+    \cs_gset:Npn \isWorkday##1##2
     {
-      % d \addtocounter{##4}{1}
       \seq_set_split:Nnn\l_workday_seq{~}{#2}%
       \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1 }
       \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \l_tmpa_int }}
-      \tl_if_eq:VnTF \l_tmpa_tl {H} {##2} {##3}
+      \tl_if_eq:VnT \l_tmpa_tl {H} {\whitespace{##2}}
     }
   }
 \ExplSyntaxOff
