concept implementation of solution

--- a/commands.tex
+++ b/commands.tex
@@ -29,7 +29,7 @@
 
 \newcommand{\smartWhitspace}[1]{
   % &\addtocounter{#1}{1}
-  % \isWorkday{\arabic{#1}}{#1}
+  \isWorkday{\arabic{#1}}{#1}
 }
 
 
