--- a/tex3.tex
+++ b/tex3.tex
@@ -1,5 +1,6 @@
 \newcommand{\whitespace}[1]{
-  &\addtocounter{#1}{1}
+  % \addtocounter{#1}{1}
+  % \multicolumn{1}{c}{}
 }
 
 \ExplSyntaxOn
@@ -36,14 +37,20 @@
 }
 
 
-\NewDocumentCommand{\createIsWorkdayCommand}{mm}
-{
-    \cs_gset:Npn \isWorkday##1##2
-    {
-      \seq_set_split:Nnn\l_workday_seq{~}{#2}%
-      \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1 }
-      \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \l_tmpa_int }}
-      \tl_if_eq:VnT \l_tmpa_tl {H} {\whitespace{##2}}
-    }
+
+
+\NewDocumentCommand{\createIsWorkdayCommand}{mm}{
+  \cs_gset:Npn \theTest ##1{
+    \seq_set_split:Nnn\l_workday_seq { } {A H A}%
+    \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1}
+    \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int } }
+    \tl_if_eq:VnTF \l_tmpa_tl {H} {Holiday} {Schaffe}
   }
-\ExplSyntaxOff
+  \cs_gset:Npn \isWorkday##1##2{
+    % \seq_set_split:Nnn\l_workday_seq{~}{#2}%
+    % \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1 }
+    % \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \l_tmpa_int }}
+    % \tl_if_eq:VnT \l_tmpa_tl {H} {\whitespace{##2}}
+  }
+}
+\ExplSyntaxOff{}
