--- a/timetable.tex
+++ b/timetable.tex
@@ -75,8 +75,13 @@
 \pagenumbering{gobble}
 
 \input{vars.tex}
+
+
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{A H A}
+\theTest{15}
+\theTest{30}
+\theTest{45}
 
 \task{34}{4}{4}
 \task{34}{12}{12}
