--- a/timetable.tex
+++ b/timetable.tex
@@ -15,7 +15,7 @@
 \usepackage[table,xcdraw,  x11names]{xcolor}
 \usepackage{makecell, hhline} 
 \usepackage{tabstackengine} 
-\usepackage{etex} 
+% \usepackage{etex} 
 \usepackage{pgffor}
 \usepackage{expl3}
 \usepackage{typearea} % Page layout
@@ -79,9 +79,9 @@
 
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{A H A}
-\theTest{15}
-\theTest{30}
-\theTest{45}
+% \theTest{15}
+% \theTest{30}
+% \theTest{45}
 
 \task{34}{4}{4}
 \task{34}{12}{12}
