--- a/timetable.tex
+++ b/timetable.tex
@@ -11,7 +11,7 @@
 \usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage[english]{babel}
-\usepackage{multirow}
+% \usepackage{multirow}
 \usepackage[table,xcdraw,  x11names]{xcolor}
 \usepackage{makecell, hhline} 
 \usepackage{tabstackengine} 
@@ -22,7 +22,7 @@
 \usepackage{tabularray}
 \usepackage{array} % needed for \newcolumntype
 \usepackage{xparse}
-\usepackage{multirow}
+% \usepackage{multirow}
 \usepackage{cellspace}
 \usepackage{ifthen}
 
