--- a/tex3.tex
+++ b/tex3.tex
@@ -1,9 +1,13 @@
 \newcommand{\whitespace}[1]{
   \addtocounter{#1}{1}
-  \multicolumn{1}{c}{}
+  &%
+  % \multicolumn{1}{c}{}
 }
 
 \ExplSyntaxOn
+
+\cs_new:Npn \getLetter { B } % Example function returning 'A'
+
 \cs_generate_variant:Nn \tl_if_eq:nnTF { V }
 \cs_generate_variant:Nn \tl_if_eq:nnT { V }
 
@@ -37,7 +41,9 @@
 }
 
 
-
+\cs_gset:Npn \isWorkday #1 #2{%
+\tl_if_eq:nnT#1{H}{#2}%
+}
 
 \NewDocumentCommand{\createIsWorkdayCommand}{mm}{
   \cs_gset:Npn \theTest{
@@ -47,12 +53,14 @@
     % \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int } }
     % \tl_if_eq:VnTF \l_tmpa_tl {H} {\whitespace{##2}} {}
   }
-  \cs_gset:Npn \isWorkday ##1 ##2{
-     \seq_set_split:Nnn\l_workday_seq { } {#2}%
+  \cs_gset:Npn \getDay ##1{
+    \seq_set_split:Nnn\l_workday_seq { } {#2}%
     \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1}
     \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int } }
-    \tl_if_eq:VnTF \l_tmpa_tl {H} {\whitespace{##2}} {}
-    &
+    \l_tmpa_tl
+    % \tl_if_eq:VnTF \l_tmpa_tl {H} {\whitespace{##2}} {}
+    % &
+    % \addtocounter{##2}{1}
   }
 }
 \ExplSyntaxOff{}
