--- a/tex3.tex
+++ b/tex3.tex
@@ -7,6 +7,8 @@
 \ExplSyntaxOn
 
 \cs_new:Npn \getLetter { B } % Example function returning 'A'
+% \cs_new:Npn \getLetter { B } % Example function returning 'A'
+
 
 \cs_generate_variant:Nn \tl_if_eq:nnTF { V }
 \cs_generate_variant:Nn \tl_if_eq:nnT { V }
@@ -39,10 +41,10 @@
 {
   \runForDays{#1}{\addIpaDay}{\addRestDay}
 }
-
+% \newcommand\optionalCol[2]{#2\unexpanded{#1}}
 
 \cs_gset:Npn \isWorkday #1 #2{%
-\tl_if_eq:nnT#1{H}{#2}%
+\tl_if_eq:nnT#1{H}{\optionalCol{#2}}%
 }
 
 \NewDocumentCommand{\createIsWorkdayCommand}{mm}{
@@ -56,8 +58,9 @@
   \cs_gset:Npn \getDay ##1{
     \seq_set_split:Nnn\l_workday_seq { } {#2}%
     \int_set:Nn \l_tmpa_int { \int_div_truncate:nn {##1}{\blockAmountPerIpaDay} + 1}
-    \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int } }
-    \l_tmpa_tl
+    % \tl_set:Nx \l_tmpa_tl { \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int } }
+    % \l_tmpa_tl
+    \seq_item:Nn \l_workday_seq { \int_use:N \l_tmpa_int }
     % \tl_if_eq:VnTF \l_tmpa_tl {H} {\whitespace{##2}} {}
     % &
     % \addtocounter{##2}{1}
