--- a/timetable.tex
+++ b/timetable.tex
@@ -25,6 +25,7 @@
 % \usepackage{multirow}
 \usepackage{cellspace}
 \usepackage{ifthen}
+\usepackage{pdftexcmds}
 
 
 
@@ -83,9 +84,10 @@
 % \theTest{30}
 % \theTest{45}
 
-\task{34}{4}{4}
-\task{34}{12}{12}
-\task{34}{8}{8}
+\task{a name}{8}{5}
+\task{another name}{4}{5}
+\task{34}{4}{6}
+\task{34}{4}{6}
 % \task{suprpassing}{16}{16}
 
 % Tue
