--- a/tex3.tex
+++ b/tex3.tex
@@ -1,11 +1,23 @@
 \ExplSyntaxOn
-
-\cs_new:Npn \getLetter { B } % Example function returning 'A'
-
-
 \cs_generate_variant:Nn \tl_if_eq:nnTF { V }
 \cs_generate_variant:Nn \tl_if_eq:nnT { V }
 
+\cs_new:Npn \getLetter { H } % Example function returning 'A'
+
+\newcommand{\timeslot}[2]{
+  \ifnum\arabic{#1}>0
+    \emptycells{\arabic{#1}}
+  \fi
+
+
+  \str_if_eq:VnT { \getLetter } { H }
+  { \addtocounter{#1}{1}& }
+  % { \addtocounter{#1}{2}&& }
+
+  \Greencells{#2}{#2 (\arabic{#1})(\getDay{\arabic{#1}})} &
+  \emptycells{\numexpr\number\blockAmount-\arabic{#1} - (#2) -1\relax} 
+  \addtocounter{#1}{\number#2}
+}
 
 \cs_gset:Npn \runForDays #1#2#3
 {
@@ -33,10 +45,6 @@
 \cs_gset:Npn \calcDays #1
 {
   \runForDays{#1}{\addIpaDay}{\addRestDay}
-}
-
-\cs_gset:Npn \isWorkday #1 #2 #3{%
-\tl_if_eq:nnTF{#1}{H}{\addtocounter{#2}{1}&#3}{#3}
 }
 
 \NewDocumentCommand{\createIsWorkdayCommand}{mm}{
