--- a/timetable.tex
+++ b/timetable.tex
@@ -80,11 +80,16 @@
 
 \input{vars.tex}
 
-\addtocounter{currentPlannedHours}{16}
+% \addtocounter{currentPlannedHours}{16}
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{A H A}%
 % \getDay{20}
 \task{a name}{8}{5}
+\task{a name}{8}{5}
+\task{a name}{8}{5}
+\task{a name}{8}{5}
+% \task{a name}{8}{5}
+% \task{a name}{8}{5}
 % \task{another name}{4}{5}
 % \task{34}{4}{6}
 % \task{34}{4}{6}
