holydays can be skipped

--- a/timetable.tex
+++ b/timetable.tex
@@ -87,7 +87,7 @@
 \task{a name}{8}{5}
 \task{a name}{8}{5}
 \task{a name}{8}{5}
-\task{a name}{8}{5}
+% \task{a name}{8}{5}
 % \task{a name}{8}{5}
 % \task{a name}{8}{5}
 % \task{another name}{4}{5}
