--- a/tex3.tex
+++ b/tex3.tex
@@ -1,6 +1,4 @@
 \ExplSyntaxOn
-\cs_generate_variant:Nn \tl_if_eq:nnTF { V }
-\cs_generate_variant:Nn \tl_if_eq:nnT { V }
 
 \cs_new:Npn \getLetter{H} % Example function returning 'A'
 
@@ -39,26 +37,22 @@
 
 \NewDocumentCommand{\createGetDay}{m}{
   \cs_gset:Npn \getDay ##1{
-    \seq_set_split:Nnn\l_workday_seq { } {#1}%
-    \seq_item:Nn \l_workday_seq { \getDayIndex{##1} }
+    \tl_item:nn {#1}{\getDayIndex{##1}}
   }
 }
 
 
 \NewDocumentCommand{\createTimeslot}{m}{
   \cs_gset:Npn \timeslot ##1##2{
-    \ifnum\arabic{##1}>0
+    \ifnum\arabic{##1}>0\relax
       \emptycells{\arabic{##1}}
     \fi
 
 
-    \str_if_eq:nnT
+    \str_if_eq:eeT
       { \getDay{\arabic{##1}} }
       { H }
       { \addtocounter{##1}{1}& }
-
-  
-  
 
     \Greencells{##2}{##2 (\arabic{##1}) (\getDay{\arabic{##1}})} &
     \emptycells{\numexpr\number\blockAmount-\arabic{##1}- (##2) -1\relax} 
