--- a/timetable.tex
+++ b/timetable.tex
@@ -65,9 +65,9 @@
 \newcolumntype{I}{!{\thickvrule}c!{\thickvrule}}
 
 
-\newcolumntype{A}{*{\blockAmountPerIpaDay}{c!{\bluevrule}}}
+\newcolumntype{W}{*{\blockAmountPerIpaDay}{c!{\bluevrule}}}
 
-\newcolumntype{H}{>{\columncolor{Gray}}c}
+\newcolumntype{R}{>{\columncolor{Gray}}c}
 
 
 
@@ -82,11 +82,12 @@
 
 % \addtocounter{currentPlannedHours}{16}
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{A H A}%
+\begin{Timetable}{tabular}{W R W}%
 % \getDay{20}
 \task{a name}{8}{5}
 \task{a name}{8}{5}
 \task{a name}{8}{5}
+\task{a name}{2}{2}
 % \task{a name}{8}{5}
 % \task{a name}{8}{5}
 % \task{a name}{8}{5}
