--- a/tex3.tex
+++ b/tex3.tex
@@ -17,7 +17,7 @@
 
 \cs_gset:Npn \createDayTimeSlots #1
 {
-  \runForDays{#1}{\aDay{123}}{& 0}
+  \runForDays{#1}{\aDay{123}}{& 0 \insertRestDaySpace}
 }
 
 \cs_gset:Npn \createDayHeader #1
@@ -41,6 +41,9 @@
   }
 }
 
+\cs_gset:Npn \insertRestDaySpace{
+  \Repeat{\hiddnRestColls}{&}
+}
 
 \NewDocumentCommand{\createTimeslot}{m}{
   \cs_gset:Npn \timeslot ##1##2{
@@ -48,18 +51,18 @@
       \emptycells{\arabic{##1}}
     \fi
 
-  % \bool_while_do:nn
-  %   {
-  %     \str_compare_p:eNe { \getDay{\arabic{##1}} } = { R }
-  %   }
-  %   {
-  %     \addtocounter{##1}{16}&
-  %   }
+  \bool_while_do:nn
+    {
+      \str_compare_p:eNe { \getDay{\arabic{##1}} } = { R }
+    }
+    {
+      \addtocounter{##1}{16}&&&&&&&&&&&&&&&&
+    }
 
-    \str_if_eq:eeT
-      { \getDay{\arabic{##1}} }
-      { R }
-      { \addtocounter{##1}{1}& }
+    % \str_if_eq:eeT
+    %   { \getDay{\arabic{##1}} }
+    %   { R }
+    %   { \addtocounter{##1}{1}& }
 
     \Greencells{##2}{##2 (\arabic{##1}) ()} &
     \emptycells{\numexpr\number\blockAmount-\arabic{##1}- (##2) -1\relax} 
