--- a/vars.tex
+++ b/vars.tex
@@ -6,7 +6,8 @@
 
 \newcommand{\blockSize}{\number30}
 \newcommand{\blockAmountPerIpaDay}{\number\numexpr \hoursPerDay * \minutesPerHour / \blockSize\relax}
-\newcommand{\blockAmount}{\number\numexpr  \blockAmountPerIpaDay * \number\theipaDays + \number\therestDays\relax}
+\newcommand{\hiddnRestColls}{\number\numexpr \number\blockAmountPerIpaDay -1\relax}
+\newcommand{\blockAmount}{\number\numexpr  \blockAmountPerIpaDay * (\number\theipaDays + \number\therestDays)\relax}
 \newcommand{\headerColsAmount}{\number\numexpr \blockAmount+1\relax}
 
 
