space gets inserted dynamically

--- a/tex3.tex
+++ b/tex3.tex
@@ -56,7 +56,8 @@
       \str_compare_p:eNe { \getDay{\arabic{##1}} } = { R }
     }
     {
-      \addtocounter{##1}{16}&&&&&&&&&&&&&&&&
+      \Repeat{\blockAmountPerIpaDay}{\addtocounter{##1}{1}&}
+      % \addtocounter{##1}{16}&&&&&&&&&&&&&&&&
     }
 
     % \str_if_eq:eeT
