--- a/timetable.tex
+++ b/timetable.tex
@@ -71,7 +71,7 @@
 \newcolumntype{W}{*{\blockAmountPerIpaDay}{c!{\bluevrule}}}
 
 % *{\blockAmountPerIpaDay}{H}
-\newcolumntype{R}{>{\columncolor{Gray}}c*{\hiddnRestColls}{H}}
+\newcolumntype{R}{>{\columncolor{Gray}}c*{\hiddnRestColls}{H}!{\bluevrule}}
 
 
 
@@ -86,7 +86,7 @@
 
 % \addtocounter{currentPlannedHours}{16}
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{W R W}%
+\begin{Timetable}{tabular}{W R R W}%
 % \getDay{20}
 \task{a name}{8}{5}
 \task{a name}{8}{5}
