comparation between all slots and available work slots works

--- a/commands.tex
+++ b/commands.tex
@@ -31,9 +31,9 @@
 
 \newcommand{\task}[3]{
   #1
-  &\timeslot{currentPlannedHours}{#2}
+  \timeslot{currentPlannedHours}{#2}
   \\
-  &\timeslot{currentDoneHours}{#3}
+  \timeslot{currentDoneHours}{#3}
   \\\hline
 }
 
