--- a/tex3.tex
+++ b/tex3.tex
@@ -2,6 +2,9 @@
 
 \cs_new:Npn \getLetter{H} % Example function returning 'A'
 
+\cs_generate_variant:Nn \int_eval:n {e}
+\cs_generate_variant:Nn \int_eval:n {v}
+\cs_generate_variant:Nn \int_eval:n {V}
 \cs_gset:Npn \runForDays #1#2#3
 {
   \seq_set_split:Nnn \l_tmpa_seq { ~ } { #1 }
@@ -49,6 +52,7 @@
     }
 
     % \Greencells{#2}{#2 (\arabic{#1}) ()} &
+    % \addtocounter{#1}{1}&
     \Greencells{#2}{(#3) (\blocksTilNextRest{#1})} &
 }
 
@@ -59,29 +63,31 @@
 }
 
 \NewDocumentCommand{\createTimeslot}{m}{
-  \int_new:N \g_slots_to_draw
-  \int_new:N \g_drawn_slots
+  \int_gzero_new:N \g_slots_to_draw
+  \int_gzero_new:N \g_drawn_slots
   \cs_gset:Npn \timeslot ##1##2{
+    \int_gset:Nn\g_slots_to_draw{\number##2}%
+    &
     \int_compare:nNnT {\arabic{##1}} > {0} {
-      \int_gset:Nn\g_slots_to_draw{\number##2}%
-      \int_gset:Nn\g_drawn_slots{0}%
-      % \int_gset:Nn\g_drawn_slots{\number##2}%
       \emptycells{\arabic{##1}}
     }
+    
 
     % \int_do_until:nNnn {\g_drawn_slots} = {\g_slots_to_draw} {
-      % \int_compare:nTF {\g_slots_to_draw > \blocksTilNextRest{##1}}
-      % {
-      %   % \timeslotItem{##1}{\blocksTilNextRest{##1}}{##2}
-      %   \int_gset:Nn\g_slots_to_draw{\int_eval:n{\g_slots_to_draw -\blocksTilNextRest{##1}}}
-      % }
-      % {
-      %   % \timeslotItem{##1}{\int_use:N \g_slots_to_draw}{##2}
-      %   \int_gset:Nn\g_slots_to_draw{0}
-      % }
+      \int_compare:nTF {\g_slots_to_draw > \int_eval:V{0 + \blocksTilNextRest{##1}}}
+      {
+        \timeslotItem{##1}{\blocksTilNextRest{##1}}{##2}
+        % \int_gset:Nn\g_slots_to_draw{\int_eval:n{\g_slots_to_draw -\blocksTilNextRest{##1}}}
+        % \int_gset:Nn\g_slots_to_draw{1}
+      }
+      {
+        \timeslotItem{##1}{\int_use:N \g_slots_to_draw}{##2}
+        % \int_gzero:N\g_slots_to_draw
+        % \int_gset:Nn\g_slots_to_draw{0}
+      }
     % }
         
-    \timeslotItem{##1}{##2}{##2}
+    % \timeslotItem{##1}{\expandafter\int_use:N \g_slots_to_draw}{##2}
 
   
     \emptycells{\numexpr\number\blockAmount-\arabic{##1}- (##2) -1\relax} 
