--- a/commands.tex
+++ b/commands.tex
@@ -39,7 +39,7 @@
 
 \newcommand\Greencells[2]{\multicolumn{#1}{Sc}{\cellcolor[HTML]{009901}#2}}
 \newcommand\Lightbluecells[2]{\multicolumn{#1}{Sc}{\cellcolor[HTML]{34CDF9}#2}}
-\newcommand\emptycells[1]{\Repeat{#1}{\makecell{} &}}
+\newcommand\emptycells[1]{\Repeat{#1}{& \makecell{}}}
 
 \newcouterinit[0]{ipaDays}
 \newcouterinit[0]{restDays}
