--- a/tex3.tex
+++ b/tex3.tex
@@ -43,6 +43,8 @@
 }
 
 \cs_gset:Npn \timeslotItem #1#2#3{
+  % \getDay{}
+  \arabic{#1}
   \bool_while_do:nn
     {
       \str_compare_p:eNe { \getDay{\arabic{#1}} } = { R }
@@ -53,7 +55,8 @@
 
     % \Greencells{#2}{#2 (\arabic{#1}) ()} &
     % \addtocounter{#1}{1}&
-    \Greencells{#2}{(#3) (\blocksTilNextRest{#1})} &
+    &\Greencells{#2}{(#3) (\blocksTilNextRest{#1})}
+    \addtocounter{#1}{\number#2}
 }
 
 \NewDocumentCommand{\createGetDay}{m}{
@@ -65,51 +68,55 @@
 \NewDocumentCommand{\createTimeslot}{m}{
   \int_gzero_new:N \g_slots_to_draw
   \int_gzero_new:N \g_drawn_slots
+  \int_gzero_new:N \g_max_available_slots
+  \int_gzero_new:N \g_slots_to_be_drawn
   \cs_gset:Npn \timeslot ##1##2{
     \int_gset:Nn\g_slots_to_draw{\number##2}%
-    &
     \int_compare:nNnT {\arabic{##1}} > {0} {
       \emptycells{\arabic{##1}}
     }
     
 
-    % \int_do_until:nNnn {\g_drawn_slots} = {\g_slots_to_draw} {
-      \int_compare:nTF {\g_slots_to_draw > \int_eval:V{0 + \blocksTilNextRest{##1}}}
+    \int_do_until:nNnn {\g_drawn_slots} = {\g_slots_to_draw} {
+      \blocksTilNextRest{##1}
+      % (\int_use:N \g_till_next_rest)
+      \int_compare:nTF {\g_slots_to_draw > \g_till_next_rest}
       {
-        \timeslotItem{##1}{\blocksTilNextRest{##1}}{##2}
-        % \int_gset:Nn\g_slots_to_draw{\int_eval:n{\g_slots_to_draw -\blocksTilNextRest{##1}}}
-        % \int_gset:Nn\g_slots_to_draw{1}
+        \int_gset:Nn\g_slots_to_be_drawn{\int_eval:n{\g_slots_to_draw -(\g_slots_to_draw -\g_till_next_rest)}}
+        \timeslotItem{##1}{\expandafter\int_use:N \g_slots_to_be_drawn}{##2}
+        \int_gset:Nn\g_slots_to_draw{\int_eval:n{\g_slots_to_draw -\g_slots_to_be_drawn}}
       }
       {
         \timeslotItem{##1}{\int_use:N \g_slots_to_draw}{##2}
-        % \int_gzero:N\g_slots_to_draw
+        \int_gzero:N\g_slots_to_draw
         % \int_gset:Nn\g_slots_to_draw{0}
       }
-    % }
+    }
         
     % \timeslotItem{##1}{\expandafter\int_use:N \g_slots_to_draw}{##2}
 
   
     \emptycells{\numexpr\number\blockAmount-\arabic{##1}- (##2) -1\relax} 
-    \addtocounter{##1}{\number##2}
+    
   }
 }
 
+
 \NewDocumentCommand{\createBlocksTilNextRest}{m}{
   \newcouterinit{till_next_rest}
-  \int_new:N \l_till_next_rest
+  \int_new:N \g_till_next_rest
   \cs_gset:Npn \blocksTilNextRest ##1{
-    \int_gset:Nn \l_till_next_rest {\arabic{##1}}
+    \int_gset:Nn \g_till_next_rest {\arabic{##1}}
   
     
     \bool_while_do:nn
     {
-      \str_compare_p:eNe { \getDay{\number\numexpr\arabic{##1} + \l_till_next_rest\relax} } = { W }
+      \str_compare_p:eNe { \getDay{\number\numexpr\arabic{##1} + \g_till_next_rest\relax} } = { W }
     }
     {
-      \int_gset:Nn \l_till_next_rest {\int_eval:n { \l_till_next_rest + 1 }}
+      \int_gset:Nn \g_till_next_rest {\int_eval:n { \g_till_next_rest + 1 }}
     }
-    \int_use:N \l_till_next_rest
+    % \int_use:N \g_till_next_rest
   }
 }
 
