--- a/tex3.tex
+++ b/tex3.tex
@@ -18,6 +18,14 @@
     }
 }
 
+\cs_gset:Npn \getColor #1{
+  \str_case:nn {#1}
+    {
+      {currentPlannedHours}{\currentPlannedColor}
+      {currentDoneHours}{\currentDoneColor}
+    }
+}
+
 \cs_gset:Npn \createDayTimeSlots #1
 {
   \runForDays{#1}{\aDay{123}}{& 0 \insertRestDaySpace}
@@ -51,7 +59,7 @@
       \Repeat{\blockAmountPerIpaDay}{\addtocounter{#1}{1}&}
     }
 
-    &\Greencells{#2}{#3}
+    &\coloredCell{#1}{#2}{#3}
     \addtocounter{#1}{\number#2}
 }
 
