--- a/vars.tex
+++ b/vars.tex
@@ -15,3 +15,7 @@
 \newcouterinit{currentPlannedHours}
 \newcouterinit{currentDoneHours}
 
+\newcouterinit[0]{ipaDays}
+\newcouterinit[0]{restDays}
+\newcommand{\addIpaDay}{\addtocounter{ipaDays}{1}}
+\newcommand{\addRestDay}{\addtocounter{restDays}{1}}
