fill entire frei column

--- a/commands.tex
+++ b/commands.tex
@@ -25,7 +25,11 @@
   &\multicolumn{\blockAmountPerIpaDay}{|c|}{#1}
 }
 \newcommand{\holidyDayHeader}{
-  & Frei \insertRestDaySpace
+  & 
+  % \multirow{5}{*}{\rotatebox[origin=l]{90}{Text}} 
+  % \cellcolor{gray}
+  Frei 
+  \insertRestDaySpace 
 }
 
 
