--- a/timetable.tex
+++ b/timetable.tex
@@ -22,6 +22,8 @@
 \usepackage{xparse}
 \usepackage{cellspace}
 \usepackage{multirow}
+\usepackage{datenumber}
+
 
 
 \setlength\cellspacetoplimit{1ex}
@@ -33,8 +35,9 @@
 \input{tex3.tex}
 \input{colors.tex}
 
-\NewDocumentEnvironment{Timetable}{md<>O{c}mO{\isWorkday:n}}
+\NewDocumentEnvironment{Timetable}{md<>O{W W}mO{2025}O{03}O{19}}
 {
+    \setdatenumber{#5}{#6}{#7}
     \calcDays{#4}
     \begin{#1}[#3]{I #4}%
     \hline%
@@ -72,7 +75,7 @@
 \input{vars.tex}
 
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{W R W}%
+\begin{Timetable}{tabular}{W R W}
 \colorBlue
 
 \task{a name}{8}{8}
