add more rest days

--- a/timetable.tex
+++ b/timetable.tex
@@ -66,7 +66,7 @@
 \input{vars.tex}
 
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{W R W}
+\begin{Timetable}{tabular}{W R R R W}
 \colorBlue
 
 \task{a name}{8}{8}
