add vertical text as explanation for rest day

--- a/commands.tex
+++ b/commands.tex
@@ -28,9 +28,11 @@
 }
 \newcommand{\holidyDayHeader}{
   & 
-  % \multirow{5}{*}{\rotatebox[origin=l]{90}{Text}} 
   % \cellcolor{gray}
-  % Frei 
+  %Frei 
+  %\multirowthead{10}{L\\ U\\ N\\ C\\ H}
+
+  \multirow{15}{*}{\rotatebox[origin=l]{90}{Frei am: \datedate}} 
   \insertRestDaySpace 
 }
 
