add poc for vertical text in column

--- a/commands.tex
+++ b/commands.tex
@@ -28,11 +28,10 @@
 }
 \newcommand{\holidyDayHeader}{
   & 
-  % \cellcolor{gray}
+  %\cellcolor{Gray}
   %Frei 
   %\multirowthead{10}{L\\ U\\ N\\ C\\ H}
 
-  \multirow{15}{*}{\rotatebox[origin=l]{90}{Frei am: \datedate}} 
   \insertRestDaySpace 
 }
 
