add sprint logic

--- a/colors.tex
+++ b/colors.tex
@@ -6,7 +6,9 @@
   \str_case:nn {#1}
     {
       {currentPlannedHours}{\g_currentPlannedColor}
+      {sprintPlannedHours}{\g_currentPlannedColor}
       {currentDoneHours}{\g_currentDoneColor}
+      {sprintDoneHours}{\g_currentDoneColor}
     }
 }
 
