--- a/vars.tex
+++ b/vars.tex
@@ -12,6 +12,12 @@
 \newcouterinit{currentPlannedHours}
 \newcouterinit{currentDoneHours}
 
+\newcouterinit{sprintPlannedHours}
+\newcouterinit{sprintDoneHours}
+
+\newcouterinit{sprintPlannedHoursBase}
+\newcouterinit{sprintDoneHoursBase}
+
 \newcouterinit[0]{ipaDays}
 \newcouterinit[0]{restDays}
 \newcommand{\addIpaDay}{\addtocounter{ipaDays}{1}}
