--- a/timetable.tex
+++ b/timetable.tex
@@ -73,21 +73,22 @@
 \pagenumbering{gobble}
 
 \input{vars.tex}
-%\setcounter{currentPlannedHours}{4}
-%\setcounter{currentDoneHours}{4}
 \begin{table}[]\label{my-label}
 \begin{Timetable}{tabular}{W W R R W W R W W R R W W R R W}
 \colorGray
 \task{Keine IPA}{4}{4}
-\colorBlue
+
+
+\StartSprint\colorBlue%
 \task{Aufgabe 1}{2}{2}
 \task{Aufgabe 2}{2}{2}
-\colorRed
+\EndSprint{Sprint 1}
+\StartSprint\colorRed
 \task{a name}{4}{2}
 \task{a name}{4}{2}
 \task{a name}{4}{2}
 \task{a name}{4}{2}
-
+\EndSprint{Sprint 2}
 
 \end{Timetable}
 \end{table}
